<resources>
    <string name="app_name">SNSDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chat">聊天</string>
    <string name="menu_photo">相册</string>
    <string name="menu_setting">设置</string>
    <string name="menu_friends">好友</string>
    <string name="menu_vinispace">空间</string>
</resources>