<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_photo" />
        <item
            android:id="@+id/nav_vinispace"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_vinispace" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_friends" />
    </group>
</menu>