<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chat">

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.feiyueve.snsdemo.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.feiyueve.snsdemo.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_photo"
        android:name="com.feiyueve.snsdemo.ui.photo.PhotoFragment"
        android:label="@string/menu_photo"
        tools:layout="@layout/fragment_setting" />

</navigation>